--- a/data/cards/03431737.yaml
+++ b/data/cards/03431737.yaml
@@ -10,7 +10,7 @@ name:
   ja: バスター・ビースト
   ja_romaji: Basutā Bīsuto
   ko: 버스터 비스트
-  ko_rr:
+  ko_rr: Beoseuteo Biseteu
   zh-TW:
   zh-CN: 爆裂兽
 text:
