--- a/data/cards/06901008.yaml
+++ b/data/cards/06901008.yaml
@@ -10,22 +10,22 @@ name:
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>影<rt>えい</rt></ruby><ruby>王<rt>おう</rt></ruby> ハイド・ライド
   ja_romaji: Gen'eiō Haido Raido
   ko: 환영왕 하이드 라이드
-  ko_rr:
+  ko_rr: Hwan-yeongwang Haideu Raideu
   zh-TW:
   zh-CN: 幻影王 幽骑
 text:
   en: |-
     If you use this card you control as Synchro Material, you can treat it as a non-Tuner.
   de: |-
-    Falls du diese Karte, die du kontrollierst, für eine Synchrobeschwörung verwendest, kannst du sie als Nicht-Empfänger-Monster behandeln.
+    Falls du diese Karte, die du kontrollierst, als Synchromaterial verwendest, kannst du sie als Nicht-Empfänger behandeln.
   es: |-
-    Si usas esta carta que controlas para una Invocación por Sincronía, puedes tratarla como un monstruo no Cantante.
+    Si usas esta carta que controles como Material de Sincronía, puedes tratarla como un monstruo que no sea Cantante.
   fr: |-
-    Si vous utilisez cette carte que vous contrôlez pour une Invocation Synchro, vous pouvez la traiter comme un monstre non-Syntoniseur.
+    Si vous utilisez cette carte que vous contrôlez comme Matériel Synchro, vous pouvez la traiter comme non-Syntoniseur.
   it: |-
-    Se utilizzi questa carta che controlli per una Synchro Evocazione, puoi considerarla come un mostro non-Tuner.
+    Se utilizzi questa carta che controlli come Materiale Synchro, puoi considerarla come un non-Tuner.
   pt: |-
-    Se você usar este card que você controla em uma Invocação-Sincro, você pode considerá-lo como um monstro não-Regulador.
+    Se você usar este card que você controla como Matéria Sincro, você pode considerá-lo como um não-Regulador.
   ja: |-
     ①：自分フィールドのこのカードをＳ素材とする場合、このカードをチューナー以外のモンスターとして扱う事ができる。
   ko: |-
