--- a/data/cards/14886469.yaml
+++ b/data/cards/14886469.yaml
@@ -10,22 +10,22 @@ name:
   ja: レッド・スプリンター
   ja_romaji: Reddo Supurintā
   ko: 레드 스프린터
-  ko_rr:
+  ko_rr: Redeu Seupeurinteo
   zh-TW:
   zh-CN: 红莲赛马
 text:
   en: |-
     When this card is Normal or Special Summoned while you control no other monsters: You can Special Summon 1 Level 3 or lower Fiend Tuner from your hand or GY. You can only use this effect of "Red Sprinter" once per turn.
   de: |-
-    Wenn diese Karte als Normal- oder Spezialbeschwörung beschworen wird, solange du keine anderen Monster kontrollierst: Du kannst 1 Empfänger vom Typ Unterweltler der Stufe 3 oder niedriger als Spezialbeschwörung von deiner Hand oder deinem Friedhof beschwören. Du kannst diesen Effekt von „Roter Renner“ nur einmal pro Spielzug verwenden.
+    Wenn diese Karte als Normal- oder Spezialbeschwörung beschworen wird, solange du keine anderen Monster kontrollierst: Du kannst 1 Unterweltler-Empfänger der Stufe 3 oder niedriger als Spezialbeschwörung von deiner Hand oder deinem Friedhof beschwören. Du kannst diesen Effekt von „Roter Renner“ nur einmal pro Spielzug verwenden.
   es: |-
-    Cuando esta carta es Invocada de Modo Normal o Especial mientras no controlas otros monstruos: puedes Invocar de Modo Especial, desde tu mano o Cementerio, 1 Cantante de Tipo Demonio de Nivel 3 o menor. Sólo puedes usar este efecto de "Velocista Rojo" una vez por turno.
+    Cuando esta carta es Invocada de Modo Normal o Especial mientras no controlas otros monstruos: puedes Invocar de Modo Especial, desde tu mano o Cementerio, 1 Cantante Demonio de Nivel 3 o menor. Sólo puedes usar este efecto de "Velocista Rojo" una vez por turno.
   fr: |-
-    Lorsque cette carte est Invoquée Normalement ou Spécialement tant que vous ne contrôlez aucun autre monstre : vous pouvez Invoquer Spécialement 1 Syntoniseur de Type Démon de max. Niveau 3 depuis votre main ou Cimetière. Vous ne pouvez utiliser cet effet de "Sprinteur Rouge" qu'une fois par tour.
+    Lorsque cette carte est Invoquée Normalement ou Spécialement tant que vous ne contrôlez aucun autre monstre : vous pouvez Invoquer Spécialement 1 Syntoniseur Démon de max. Niveau 3 depuis votre main ou Cimetière. Vous ne pouvez utiliser cet effet de "Sprinteur Rouge" qu'une fois par tour.
   it: |-
-    Quando questa carta viene Evocata Normalmente o Specialmente mentre non controlli nessun altro mostro: puoi Evocare Specialmente 1 Tuner di Tipo Demone di Livello 3 o inferiore dalla tua mano o Cimitero. Puoi utilizzare questo effetto di "Velocista Rosso" una sola volta per turno.
+    Quando questa carta viene Evocata Normalmente o Specialmente mentre non controlli nessun altro mostro: puoi Evocare Specialmente 1 Tuner Demone di Livello 3 o inferiore dalla tua mano o Cimitero. Puoi utilizzare questo effetto di "Velocista Rosso" una sola volta per turno.
   pt: |-
-    Quando este card for Invocado por Invocação-Normal ou Especial enquanto você não controlar nenhum monstro: você pode Invocar por Invocação-Especial 1 Regulador do Tipo Demônio de Nível 3 ou menos da sua mão ou do Cemitério. Você só pode usar este efeito de "Corredor Vermelho" uma vez por turno.
+    Quando este card for Invocado por Invocação-Normal ou Especial enquanto você não controlar nenhum outro monstro: você pode Invocar por Invocação-Especial 1 Regulador Demônio de Nível 3 ou menos da sua mão ou do Cemitério. Você só pode usar este efeito de "Corredor Vermelho" uma vez por turno.
   ja: |-
     このカード名の効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した時、自分フィールドに他のモンスターが存在しなければ発動できる。自分の手札・墓地からレベル３以下の悪魔族チューナー１体を特殊召喚する。
   ko: |-
