--- a/data/cards/15576074.yaml
+++ b/data/cards/15576074.yaml
@@ -10,14 +10,14 @@ name:
   ja: リゾネーター・エンジン
   ja_romaji: Rizonētā Enjin
   ko: 레조네이터 엔진
-  ko_rr:
+  ko_rr: Rejoneiteo Enjin
   zh-TW:
   zh-CN: 共鸣者引擎
 text:
   en: |-
     Target 2 "Resonator" monsters in your GY; add 1 Level 4 monster from your Deck to your hand, and if you do, return those targets to the Deck.
   de: |-
-    Wähle 2 „Resonator“-Monster in deinem Friedhof; füge deiner Hand 1 Monster der Stufe 4 von deinem Deck hinzu und falls du dies tust, lege die gewählten Ziele ins Deck zurück.
+    Wähle 2 „Resonator“-Monster in deinem Friedhof; füge deiner Hand 1 Monster der Stufe 4 von deinem Deck hinzu und falls du dies tust, lege jene gewählten Ziele ins Deck zurück.
   es: |-
     Selecciona 2 monstruos "Resonador" en tu Cementerio; añade a tu mano 1 monstruo de Nivel 4 en tu Deck y, si lo haces, devuelve esos objetivos al Deck.
   fr: |-
