--- a/data/cards/22723778.yaml
+++ b/data/cards/22723778.yaml
@@ -1,7 +1,7 @@
 konami_id: 19025
 password: 22723778
 name:
-  en: Colorless, Chaos King of Dark World
+  en: Clorless, Chaos King of Dark World
   de:
   es:
   fr:
@@ -43,7 +43,7 @@ series:
 - Dark World
 images:
 - index: 1
-  image: ColorlessChaosKingofDarkWorld-AC03-JP-UR.png
+  image: ClorlessChaosKingofDarkWorld-AC03-JP-UR.png
 sets:
   en:
   - set_number: MZMI-EN0??
