--- a/data/cards/24662957.yaml
+++ b/data/cards/24662957.yaml
@@ -2,25 +2,30 @@ konami_id: 19019
 password: 24662957
 name:
   en: Fiendish Golem
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Teuflischer Golem
+  es: Gólem Demoníaco
+  fr: Golem Démoniaque
+  it: Golem Demoniaco
+  pt: Golem Demoníaco
   ja: デモンズ・ゴーレム
   ja_romaji: Demonzu Gōremu
   ko: 데먼즈 골렘
-  ko_rr:
+  ko_rr: Demeonjeu Gollem
   zh-TW:
   zh-CN:
 text:
   en: |-
     Target 1 monster on the field with 2000 or more ATK; banish it (until the End Phase of the next turn), then if you activated this card while you controlled "Red Dragon Archfiend" or a Synchro Monster that mentions it, you can Set 1 "Fiendish Chain" directly from your Deck or GY.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wähle 1 Monster mit 2000 oder mehr ATK auf dem Spielfeld; verbanne es (bis zur End Phase des nächsten Spielzugs), dann, falls du diese Karte aktiviert hast, solange du „Rotdrachen-Erzunterweltler“ oder ein Synchromonster, das ihn erwähnt, kontrollierst hast, kannst du 1 „Teuflische Kette“ direkt von deinem Deck oder Friedhof setzen.
+  es: |-
+    Selecciona 1 monstruo en el Campo con 2000 ATK o más; destiérralo (hasta la End Phase del próximo turno) y después, si activaste esta carta mientras controlabas "Dragón Rojo Archidemonio" o un Monstruo de Sincronía que lo mencione, puedes Colocar 1 "Cadena Demoníaca" directamente desde tu Deck o Cementerio.
+  fr: |-
+    Ciblez 1 monstre sur le Terrain avec min. 2000 ATK ; bannissez-le (jusqu'à la End Phase du prochain tour), puis si vous avez activé cette carte tant que vous contrôliez "Dragon Rouge Archdémon" ou un Monstre Synchro qui le mentionne, vous pouvez Poser 1 "Chaîne Démoniaque" directement depuis votre Deck ou Cimetière.
+  it: |-
+    Scegli come bersaglio 1 mostro sul Terreno con ATK 2000 o superiore; bandiscilo (fino alla End Phase del prossimo turno), poi se hai attivato questa carta mentre controllavi "Arcidemone Drago Rosso" o un Mostro Synchro che lo menziona, puoi Posizionare 1 "Catena Demoniaca" direttamente dal tuo Deck o Cimitero.
+  pt: |-
+    Escolha 1 monstro no campo com 2000 ou mais de ATK; bana-o (até a Fase Final do próximo turno) e, depois, se você ativou este card enquanto você controlava "Dragão Vermelho Arquidemônio" ou um Monstro Sincro que o mencione, você pode Baixar 1 "Corrente Demoníaca" diretamente do seu Deck ou Cemitério.
   ja: |-
     ①：フィールドの攻撃力２０００以上のモンスター１体を対象として発動できる。そのモンスターを次のターンのエンドフェイズまで除外する。自分フィールドに「レッド・デーモンズ・ドラゴン」またはそのカード名が記されたＳモンスターが存在する状態でこのカードを発動した場合、さらに自分のデッキ・墓地から「デモンズ・チェーン」１枚を自分フィールドにセットできる。
   ko: |-
