--- a/data/cards/45313993.yaml
+++ b/data/cards/45313993.yaml
@@ -10,7 +10,7 @@ name:
   ja: レッド・ウルフ
   ja_romaji: Reddo Urufu
   ko: 레드 울프
-  ko_rr:
+  ko_rr: Redeu Wolpeu
   zh-TW:
   zh-CN: 红莲狼
 text:
@@ -19,13 +19,13 @@ text:
   de: |-
     Wenn du ein „Resonator“-Monster als Normalbeschwörung beschwörst: Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören, aber ihre ATK werden halbiert.
   es: |-
-    Cuando Invocas de Modo Normal un monstruo "Resonador": puedes Invocar esta carta de Modo Especial desde tu mano, pero su ATK se reduce a la mitad.
+    Cuando Invocas de Modo Normal un monstruo "Resonador": puedes Invocar esta carta de Modo Especial desde tu mano, pero su ATK se divide a la mitad.
   fr: |-
     Lorsque vous Invoquez Normalement un monstre "Diapason" : vous pouvez Invoquer Spécialement cette carte depuis votre main, mais son ATK sera divisée par deux.
   it: |-
-    Quando Evochi Normalmente un mostro "Diapason": puoi Evocare Specialmente questa carta dalla tua mano, ma il suo ATK diventa la metà.
+    Quando Evochi Normalmente un mostro "Diapason": puoi Evocare Specialmente questa carta dalla tua mano, ma il suo ATK viene dimezzato.
   pt: |-
-    Quando você Invocar por Invocação-Normal um monstro "Ressonador": você pode Invocar este card por Invocação-Especial da sua mão, mas seu ATK é reduzido à metade.
+    Quando você Invocar por Invocação-Normal um monstro "Ressonador": você pode Invocar este card por Invocação-Especial da sua mão, mas seu ATK é diminuído pela metade.
   ja: |-
     ①：自分が「リゾネーター」モンスターを召喚した時に発動できる。このカードを手札から特殊召喚する。この効果で特殊召喚したこのカードの攻撃力は半分になる。
   ko: |-
