--- a/data/cards/49238328.yaml
+++ b/data/cards/49238328.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     At the start of your Main Phase 1: Banish 3 or 6 random face-down cards from your Extra Deck, face-down; draw 1 card for every 3 cards banished. For the rest of this turn after this card resolves, you cannot draw any cards by card effects.
   de: |-
-    Am Beginn deiner Main Phase 1: Verbanne 3 oder 6 zufällige verdeckte Karten von deinem Extra Deck verdeckt; ziehe 1 Karte für je 3 verbannte Karten. Für den Rest dieses Spielzugs, nachdem diese Karte aufgelöst wurde, kannst du keine Karten durch Karteneffekte ziehen.
+    Am Beginn deiner Main Phase 1: Verbanne 3 oder 6 zufällige verdeckte Karten von deinem Extra Deck verdeckt; ziehe für je 3 verbannte Karten 1 Karte. Für den Rest dieses Spielzugs, nachdem diese Karte aufgelöst wurde, kannst du keine Karten durch Karteneffekte ziehen.
   es: |-
     Al comienzo de tu Main Phase 1: destierra al azar 3 o 6 cartas boca abajo en tu Deck Extra, boca abajo; roba 1 carta por cada 3 cartas desterradas. Por el resto de este turno después de que esta carta se resuelva, no puedes robar cartas por efectos de cartas.
   fr: |-
