--- a/data/cards/50078509.yaml
+++ b/data/cards/50078509.yaml
@@ -17,9 +17,9 @@ text:
   en: |-
     Activate this card by targeting 1 Effect Monster on the field; negate the effects of that face-up monster while it is on the field, also that face-up monster cannot attack. When it is destroyed, destroy this card.
   de: |-
-    Aktiviere diese Karte, indem du 1 Effektmonster auf dem Spielfeld wählst; annulliere die Effekte des offenen Monsters, solange es auf dem Spielfeld liegt, zusätzlich kann das offene Monster nicht angreifen. Wenn es zerstört wird, zerstöre diese Karte.
+    Aktiviere diese Karte, indem du 1 Effektmonster auf dem Spielfeld wählst; annulliere die Effekte jenes offenen Monsters, solange es auf dem Spielfeld liegt, zusätzlich kann jenes offene Monster nicht angreifen. Wenn es zerstört wird, zerstöre diese Karte.
   es: |-
-    Activa esta carta seleccionando 1 Monstruo de Efecto en el Campo; niega los efectos de ese monstruo boca arriba mientras esté en el Campo, y además ese monstruo boca arriba no puede atacar. Cuando ese monstruo es destruido, destruye esta carta.
+    Activa esta carta seleccionando 1 Monstruo de Efecto en el Campo; niega los efectos de ese monstruo boca arriba mientras esté en el Campo, y además ese monstruo boca arriba no puede atacar. Cuando es destruido, destruye esta carta.
   fr: |-
     Activez cette carte en ciblant 1 Monstre à Effet sur le Terrain ; annulez les effets du monstre face recto tant qu'il est sur le Terrain, et aussi, le monstre face recto ne peut pas attaquer. Lorsqu'il est détruit, détruisez cette carte.
   it: |-
