--- a/data/cards/54343893.yaml
+++ b/data/cards/54343893.yaml
@@ -10,22 +10,22 @@ name:
   ja: バイス・ドラゴン
   ja_romaji: Baisu Doragon
   ko: 바이스 드래곤
-  ko_rr:
+  ko_rr: Baiseu Deuraegon
   zh-TW: 惡龍
   zh-CN: 恶龙
 text:
   en: |-
     If only your opponent controls a monster, you can Special Summon this card (from your hand), but its original ATK/DEF become halved.
   de: |-
-    Falls dein Gegner ein Monster kontrolliert und du keine Monster kontrollierst, kannst du diese Karte als Spezialbeschwörung (von deiner Hand) beschwören, aber ihre Grund-ATK und -DEF werden halbiert.
+    Falls nur dein Gegner ein Monster kontrolliert, kannst du diese Karte als Spezialbeschwörung (von deiner Hand) beschwören, aber ihre Grund-ATK/DEF werden halbiert.
   es: |-
-    Si tu adversario controla un monstruo y tú no controlas ninguno, puedes Invocar esta carta de Modo Especial (desde tu mano), pero su ATK y DEF originales se dividen a la mitad.
+    Si sólo tu adversario controla un monstruo, puedes Invocar esta carta de Modo Especial (desde tu mano), pero su ATK/DEF originales se dividen a la mitad.
   fr: |-
-    Si votre adversaire contrôle un monstre et que vous n'en contrôlez aucun, vous pouvez Invoquer Spécialement cette carte (depuis votre main), mais son ATK/DEF d'origine seront divisées par deux.
+    Si uniquement votre adversaire contrôle un monstre, vous pouvez Invoquer Spécialement cette carte (depuis votre main), mais son ATK/DEF d'origine seront divisées par deux.
   it: |-
-    Se il tuo avversario controlla un mostro e tu non controlli nessun mostro, puoi Evocare Specialmente questa carta (dalla tua mano), ma i suoi ATK e DEF originali diventano la metà.
+    Se solo il tuo avversario controlla un mostro, puoi Evocare Specialmente questa carta (dalla tua mano), ma i suoi ATK/DEF originali vengono dimezzati.
   pt: |-
-    Se seu oponente controlar um monstro e você não controlar nenhum monstro, você pode Invocar este card por Invocação-Especial (da sua mão), mas seu ATK e DEF originais são reduzidos à metade.
+    Se somente seu oponente controlar um monstro, você pode Invocar este card por Invocação-Especial (da sua mão), mas seu ATK/DEF originais são diminuídos pela metade.
   ja: |-
     ①：相手フィールドにのみモンスターが存在する場合、このカードは手札から特殊召喚できる。この方法で特殊召喚したこのカードの元々の攻撃力・守備力は半分になる。
   ko: |-
