--- a/data/cards/62991792.yaml
+++ b/data/cards/62991792.yaml
@@ -2,25 +2,30 @@ konami_id: 19014
 password: 62991792
 name:
   en: Soul Resonator
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Seelenresonator
+  es: Resonador del Alma
+  fr: Diapason de l'Âme
+  it: Diapason Anima
+  pt: Ressonador da Alma
   ja: ソウル・リゾネーター
   ja_romaji: Sōru Rizonētā
   ko: 소울 레조네이터
-  ko_rr:
+  ko_rr: Soul Rejoneiteo
   zh-TW:
   zh-CN:
 text:
   en: |-
     If this card is Normal or Special Summoned: You can add 1 Level 4 or lower Fiend monster from your Deck to your hand, except "Soul Resonator", also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except DARK Synchro Monsters. If a card(s) you control would be destroyed by card effect, while you control "Red Dragon Archfiend" or a Synchro Monster that mentions it, you can banish this card from your GY instead. You can only use each effect of "Soul Resonator" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst deiner Hand 1 Unterweltler-Monster der Stufe 4 oder niedriger von deinem Deck hinzufügen, außer „Seelenresonator“, zusätzlich kannst du für den Rest dieses Spielzugs keine Monster als Spezialbeschwörung vom Extra Deck beschwören, außer FINSTERNIS Synchromonstern. Falls eine oder mehr Karten, die du kontrollierst, durch einen Karteneffekt zerstört würden, solange du „Rotdrachen-Erzunterweltler“ oder ein Synchromonster, das ihn erwähnt, kontrollierst, kannst du stattdessen diese Karte von deinem Friedhof verbannen. Du kannst jeden Effekt von „Seelenresonator“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si esta carta es Invocada de Modo Normal o Especial: puedes añadir a tu mano 1 monstruo Demonio de Nivel 4 o menor en tu Deck, excepto "Resonador del Alma", y además no puedes Invocar monstruos de Modo Especial desde el Deck Extra por el resto de este turno, excepto Monstruos de Sincronía de OSCURIDAD. Si una o más cartas que controles fueran a ser destruidas por el efecto de una carta, mientras controles "Dragón Rojo Archidemonio" o un Monstruo de Sincronía que lo mencione, puedes desterrar esta carta en tu Cementerio en su lugar. Sólo puedes usar cada efecto de "Resonador del Alma" una vez por turno.
+  fr: |-
+    Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez ajouter 1 monstre Démon de max. Niveau 4 ("Diapason de l'Âme" exclu) depuis votre Deck à votre main, et aussi, vous ne pouvez pas Invoquer Spécialement de monstres (Monstres Synchro TÉNÈBRES exclus) depuis l'Extra Deck le reste de ce tour. Si une ou plusieurs cartes que vous contrôlez vont être détruites par un effet de carte, tant que vous contrôlez "Dragon Rouge Archdémon" ou un Monstre Synchro qui le mentionne, vous pouvez bannir cette carte depuis votre Cimetière à la place. Vous ne pouvez utiliser chaque effet de "Diapason de l'Âme" qu'une fois par tour.
+  it: |-
+    Se questa carta viene Evocata Normalmente o Specialmente: puoi aggiungere 1 mostro Demone di Livello 4 o inferiore dal tuo Deck alla tua mano, eccetto "Diapason Anima", inoltre non puoi Evocare Specialmente mostri dall'Extra Deck per il resto di questo turno, eccetto Mostri Synchro OSCURITÀ. Se una o più carte che controlli stanno per essere distrutte dall'effetto di una carta, mentre controlli "Arcidemone Drago Rosso" o un Mostro Synchro che lo menziona, puoi invece bandire questa carta dal tuo Cimitero. Puoi utilizzare ogni effetto di "Diapason Anima" una sola volta per turno.
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 monstro Demônio de Nível 4 ou menos do seu Deck à sua mão, exceto "Ressonador da Alma" e, além disso, você não pode Invocar monstros por Invocação-Especial do Deck Adicional pelo resto deste turno, exceto Monstros Sincro de TREVAS. Se um ou mais cards que você controla seriam destruídos por um efeito de card, enquanto você controlar "Dragão Vermelho Arquidemônio" ou um Monstro Sincro que o mencione, em vez disso, você pode banir este card do seu Cemitério. Você só pode usar cada efeito de "Ressonador da Alma" uma vez por turno.
   ja: |-
     ①：このカードが召喚・特殊召喚した場合に発動できる。「ソウル・リゾネーター」を除く、レベル４以下の悪魔族モンスター１体をデッキから手札に加える。この効果の発動後、ターン終了時まで自分は闇属性ＳモンスターしかＥＸデッキから特殊召喚できない。②：自分フィールドに「レッド・デーモンズ・ドラゴン」またはそのカード名が記されたＳモンスターが存在し、自分フィールドのカードが効果で破壊される場合、代わりに墓地のこのカードを除外できる。
   ko: |-
