--- a/data/cards/63086455.yaml
+++ b/data/cards/63086455.yaml
@@ -23,7 +23,7 @@ text:
   fr: |-
     Ciblez 1 carte contrôlée par votre adversaire et 1 carte dans son Cimetière ; envoyez la carte sur le Terrain au Cimetière, et si vous le faites, Posez l'autre carte depuis le Cimetière sur le Terrain de votre adversaire. Vous ne pouvez activer qu'1 "Terreurs de la Surracine" par tour.
   it: |-
-    Scegli come bersaglio 1 carta controllata dal tuo avversario e 1 carta nel suo Cimitero; manda quella carta sul Terreno al Cimitero e, se lo fai, Posiziona l'altra carta dal Cimitero sul Terreno del tuo avversario. Puoi attivare solo 1 "Terrori Sopra le Radici" per turno.
+    Scegli come bersaglio 1 carta controllata dal tuo avversario e 1 carta nel suo Cimitero; manda al Cimitero quella carta sul Terreno e, se lo fai, Posiziona l'altra carta dal Cimitero sul Terreno del tuo avversario. Puoi attivare solo 1 "Terrori Sopra le Radici" per turno.
   pt: |-
     Escolha 1 card que seu oponente controla e 1 card no Cemitério dele; envie esse card no campo para o Cemitério e, se isso acontecer, Baixe o outro card do Cemitério no campo do seu oponente. Você só pode ativar 1 "Terrores da Raiz Superior" por turno.
   ja: |-
