--- a/data/cards/77336644.yaml
+++ b/data/cards/77336644.yaml
@@ -10,20 +10,20 @@ name:
   ja: レッド・デーモンズ・ドラゴン<ruby>／<rt>スラッシュ</rt></ruby>バスター
   ja_romaji: Reddo Dēmonzu Doragon Surasshu Basutā
   ko: 레드 데몬즈 드래곤 / 버스터
-  ko_rr:
+  ko_rr: Redeu Demonjeu Deuraegon Seullaesi Beoseuteo
   zh-TW:
   zh-CN: 暗红恶魔龙／爆裂
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned with "Assault Mode Activate". After damage calculation, if this card attacked: Destroy all other monsters on the field. When this card on the field is destroyed: You can target 1 "Red Dragon Archfiend" in your GY; Special Summon that target.
   de: |-
-    Diese Karte kann nicht als Normalbeschwörung beschworen oder gesetzt werden. Diese Karte kann nicht als Spezialbeschwörung beschworen werden, außer mit „Angriffsmodus aktivieren“. Falls diese Karte angreift, zerstöre nach der Schadensberechnung alle anderen Monster. Wenn diese Karte auf dem Spielfeld zerstört wird, kannst du 1 „Rotdrachen-Erzunterweltler“ als Spezialbeschwörung von deinem Friedhof beschwören.
+    Kann nicht als Normalbeschwörung beschworen/gesetzt werden. Muss durch „Angriffsmodus aktivieren“ als Spezialbeschwörung beschworen werden. Nach der Schadensberechnung, falls diese Karte angegriffen hat: Zerstöre alle anderen Monster auf dem Spielfeld. Wenn diese Karte auf dem Spielfeld zerstört wird: Du kannst 1 „Rotdrachen-Erzunterweltler“ in deinem Friedhof wählen; beschwöre jenes gewählte Ziel als Spezialbeschwörung.
   es: |-
-    Esta carta no puede ser Invocada de Modo Normal, ni Colocada. Esta carta no puede ser Invocada de Modo Especial excepto con "Activar Modo de Ataque". Si esta carta ataca, destruye todos los demás monstruos después del cálculo del daño. Cuando esta carta está en el Campo y es destruida, puedes Invocar de Modo Especial, desde tu Cementerio, 1 "Dragón Rojo Archidemonio".
+    No puede ser Invocado de Modo Normal/Colocado. Debe ser Invocado de Modo Especial con "Activar Modo de Ataque". Después del cálculo de daño, si esta carta atacó: destruye todos los demás monstruos en el Campo. Cuando esta carta en el Campo es destruida: puedes seleccionar 1 "Dragón Rojo Archidemonio" en tu Cementerio; Invoca ese objetivo de Modo Especial.
   fr: |-
-    Cette carte ne peut ni être Invoquée Normalement ni être Posée. Cette carte ne peut pas être Invoquée Spécialement, excepté avec "Activation Mode Assaut". Si cette carte attaque, détruisez tous les autres monstres après le calcul des dommages. Lorsque cette carte sur le Terrain est détruite, vous pouvez Invoquer Spécialement 1 "Dragon Rouge Archdémon" depuis votre Cimetière.
+    Ni Invocable Normalement ni Posable Normalement. Uniquement Invocable Spécialement avec "Activation Mode Assaut". Après le calcul des dommages, si cette carte a attaqué : détruisez tous les autres monstres sur le Terrain. Lorsque cette carte sur le Terrain est détruite : vous pouvez cibler 1 "Dragon Rouge Archdémon" dans votre Cimetière ; Invoquez Spécialement la cible.
   it: |-
-    Questa carta non può essere Evocata tramite Evocazione Normale o Posizionata. Questa carta non può essere Evocata tramite Evocazione Speciale se non con "Attivazione Modalità Assalto". Se questa carta attacca, distruggi tutti gli altri mostri dopo il calcolo dei danni. Quando questa carta sul Terreno viene distrutta, puoi Evocare tramite Evocazione Speciale 1 "Arcidemone Drago Rosso" dal tuo Cimitero.
+    Non può essere Evocato Normalmente/Posizionato. Deve essere Evocato Specialmente con "Attivazione Modalità Assalto". Dopo il calcolo dei danni, se questa carta ha attaccato: distruggi tutti gli altri mostri sul Terreno. Quando questa carta sul Terreno viene distrutta: puoi scegliere come bersaglio 1 "Arcidemone Drago Rosso" nel tuo Cimitero; Evoca Specialmente quel bersaglio.
   pt: |-
     Não pode ser Invocado por Invocação-Normal/Baixado. Deve ser Invocado por Invocação-Especial com "Ativar Modo de Ataque". Depois do cálculo de dano, se este card atacou: destrua todos os outros monstros no campo. Quando este card no campo for destruído: você pode escolher 1 "Dragão Vermelho Arquidemônio" no seu Cemitério; Invoque o alvo por Invocação-Especial.
   ja: |-
