--- a/data/cards/80280737.yaml
+++ b/data/cards/80280737.yaml
@@ -10,7 +10,7 @@ name:
   ja: バスター・モード
   ja_romaji: Basutā Mōdo
   ko: 버스터 모드
-  ko_rr:
+  ko_rr: Beoseuteo Modeu
   zh-TW:
   zh-CN: 爆裂模式
 text:
@@ -25,7 +25,7 @@ text:
   it: |-
     Offri come Tributo 1 Mostro Synchro; Evoca Specialmente 1 mostro "/Assalto" il cui nome include il nome del mostro offerto come Tributo dal tuo Deck in Posizione di Attacco.
   pt: |-
-    Ofereça 1 Monstro Sincro como Tributo; Invoque por Invocação-Especial do seu Deck e em Posição de Ataque, 1 monstro "/Modo de Ataque" cujo nome inclua o nome do monstro oferecido como Tributo.
+    Ofereça 1 Monstro Sincro como Tributo; Invoque por Invocação-Especial do seu Deck em Posição de Ataque, 1 monstro "/Modo de Ataque" cujo nome inclua o nome do monstro oferecido como Tributo.
   ja: |-
     ①：自分フィールドのＳモンスター１体をリリースして発動できる。そのモンスターのカード名が含まれる「／バスター」モンスター１体をデッキから攻撃表示で特殊召喚する。
   ko: |-
