--- a/data/cards/80666118.yaml
+++ b/data/cards/80666118.yaml
@@ -10,7 +10,7 @@ name:
   ja: レッド・デーモンズ・ドラゴン・スカーライト
   ja_romaji: Reddo Dēmonzu Doragon Sukāraito
   ko: 레드 데몬즈 드래곤 스카라이트
-  ko_rr:
+  ko_rr: Redeu Demonjeu Deuraegon Seukaraiteu
   zh-TW:
   zh-CN: 红莲魔龙·右红痕
 text:
@@ -19,19 +19,19 @@ text:
     This card's name becomes "Red Dragon Archfiend" while on the field or in the GY. Once per turn: You can destroy as many other Special Summoned Effect Monsters on the field as possible with ATK less than or equal to this card's, then inflict 500 damage to your opponent for each monster destroyed.
   de: |-
     1 Empfänger + 1+ Nicht-Empfänger-Monster
-    Der Name dieser Karte wird zu „Rotdrachen-Erzunterweltler“, solange sie auf dem Spielfeld oder im Friedhof liegt. Einmal pro Spielzug: Du kannst so viele als Spezialbeschwörung beschworene Effektmonster auf dem Spielfeld, deren ATK kleiner oder gleich den ATK dieser Karte sind, (außer dieser Karte) zerstören wie möglich, dann füge deinem Gegner für jedes zerstörte Monster 500 Schaden zu.
+    Der Name dieser Karte wird zu „Rotdrachen-Erzunterweltler“, solange sie auf dem Spielfeld oder im Friedhof liegt. Einmal pro Spielzug: Du kannst so viele andere als Spezialbeschwörung beschworene Effektmonster auf dem Spielfeld, deren ATK kleiner oder gleich denen dieser Karte sind, zerstören wie möglich, dann füge deinem Gegner für jedes zerstörte Monster 500 Schaden zu.
   es: |-
     1 Cantante + 1+ monstruos que no sean Cantantes
-    El nombre de esta carta se convierte en "Dragón Rojo Archidemonio" mientras esté en el Campo o en el Cementerio. Una vez por turno: puedes destruir tantos Monstruos de Efecto en el Campo como sea posible que hayan sido Invocados de Modo Especial y que tengan ATK igual o menor al de esta carta (y que no sean esta carta), y después infligir 500 puntos de daño a tu adversario por cada monstruo destruido.
+    El nombre de esta carta se convierte en "Dragón Rojo Archidemonio" mientras está en el Campo o en el Cementerio. Una vez por turno: puedes destruir tantos otros Monstruos de Efecto Invocados de Modo Especial en el Campo como sea posible que tengan ATK igual o menor al de esta carta, y después infligir 500 puntos de daño a tu adversario por cada monstruo destruido.
   fr: |-
     1 Syntoniseur + 1+ monstre non-Syntoniseur
-    Le nom de cette carte devient "Dragon Rouge Archdémon" tant qu'elle est sur le Terrain ou dans le Cimetière. Une fois par tour : vous pouvez détruire autant de Monstres à Effet Invoqués Spécialement sur le Terrain (cette carte exclue) que possible avec une ATK inférieure ou égale à celle de cette carte, puis infligez 500 points de dommages à votre adversaire pour chaque monstre détruit.
+    Le nom de cette carte devient "Dragon Rouge Archdémon" tant qu'elle est sur le Terrain ou dans le Cimetière. Une fois par tour : vous pouvez détruire autant d'autres Monstres à Effet Invoqués Spécialement sur le Terrain que possible avec une ATK inférieure ou égale à celle de cette carte, puis infligez 500 points de dommages à votre adversaire pour chaque monstre détruit.
   it: |-
     1 Tuner + 1+ mostri non-Tuner
-    Il nome di questa carta diventa "Arcidemone Drago Rosso" mentre è sul Terreno o nel Cimitero. Una volta per turno: puoi distruggere tanti Mostri con Effetto Evocati Specialmente sul Terreno con ATK pari o inferiore a quello di questa carta (a parte questa carta) quanti possibile, poi infliggi 500 danni al tuo avversario per ogni mostro distrutto.
+    Il nome di questa carta diventa "Arcidemone Drago Rosso" mentre è sul Terreno o nel Cimitero. Una volta per turno: puoi distruggere tanti altri Mostri con Effetto Evocati Specialmente sul Terreno con ATK pari o inferiore a quello di questa carta quanti possibile, poi infliggi 500 danni al tuo avversario per ogni mostro distrutto.
   pt: |-
     1 Regulador + 1+ monstros não-Reguladores
-    O nome deste card se torna "Dragão Vermelho Arquidemônio" enquanto ele estiver no campo ou no Cemitério. Uma vez por turno: você pode destruir tantos Monstro de Efeito Invocados por Invocação-Especial no campo quanto possível com ATK menor ou igual que o deste card (que não seja este card) e, depois, cause 500 de dano ao seu oponente para cada monstro destruído.
+    O nome deste card se torna "Dragão Vermelho Arquidemônio" enquanto estiver no campo ou no Cemitério. Uma vez por turno: você pode destruir tantos outros Monstros de Efeito Invocados por Invocação-Especial no campo quanto possível com ATK igual ou menor que o deste card e, depois, cause 500 de dano ao seu oponente para cada monstro destruído.
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
     ①：このカードのカード名は、フィールド・墓地に存在する限り「レッド・デーモンズ・ドラゴン」として扱う。②：１ターンに１度、自分メインフェイズに発動できる。このカード以外の、このカードの攻撃力以下の攻撃力を持つ特殊召喚された効果モンスターを全て破壊する。その後、この効果で破壊したモンスターの数×５００ダメージを相手に与える。
