--- a/data/cards/87451661.yaml
+++ b/data/cards/87451661.yaml
@@ -2,26 +2,36 @@ konami_id: 19021
 password: 87451661
 name:
   en: Scarred Dragon Archfiend
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vernarbter Rotdrachen-Erzunterweltler
+  es: Dragón Rojo Archidemonio Cicatrizado
+  fr: Dragon Rouge Archdémon Meurtri
+  it: Arcidemone Drago Rossocicatrice
+  pt: Dragão Vermelho Arquidemônio com Cicatriz
   ja: スカーレッド・デーモン
   ja_romaji: Sukāreddo Dēmon
   ko: 스카레드 데몬
-  ko_rr:
+  ko_rr: Seukaredeu Demon
   zh-TW:
   zh-CN:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner DARK monsters
     This card's name becomes "Red Dragon Archfiend" while on the field or in the GY. If this card is sent from the Monster Zone to the GY: You can Special Summon 1 "Red Dragon Archfiend" from your Extra Deck (this is treated as a Synchro Summon), then, if this card was sent to the GY as Synchro Material for a DARK Dragon Synchro Monster, you can destroy all Attack Position monsters your opponent controls. You can only use this effect of "Scarred Dragon Archfiend" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    1 Empfänger + 1+ FINSTERNIS Nicht-Empfänger-Monster
+    Der Name dieser Karte wird zu „Rotdrachen-Erzunterweltler“, solange sie auf dem Spielfeld oder im Friedhof liegt. Falls diese Karte von der Monsterzone auf den Friedhof gelegt wird: Du kannst 1 „Rotdrachen-Erzunterweltler“ als Spezialbeschwörung von deinem Extra Deck beschwören (dies wird als Synchrobeschwörung behandelt), dann, falls diese Karte als Synchromaterial für ein FINSTERNIS Drache-Synchromonster auf den Friedhof gelegt wurde, kannst du alle Monster in Angriffsposition zerstören, die dein Gegner kontrolliert. Du kannst diesen Effekt von „Vernarbter Rotdrachen-Erzunterweltler“ nur einmal pro Spielzug verwenden.
+  es: |-
+    1 Cantante + 1+ monstruos de OSCURIDAD que no sean Cantantes
+    El nombre de esta carta se convierte en "Dragón Rojo Archidemonio" mientras está en el Campo o en el Cementerio. Si esta carta es mandada de la Zona de Monstruos al Cementerio: puedes Invocar de Modo Especial, desde tu Deck Extra, 1 "Dragón Rojo Archidemonio" (esto se trata como una Invocación por Sincronía) y después, si esta carta fue mandada al Cementerio como Material de Sincronía para un Monstruo de Sincronía Dragón de OSCURIDAD, puedes destruir todos los monstruos en Posición de Ataque que controle tu adversario. Sólo puedes usar este efecto de "Dragón Rojo Archidemonio Cicatrizado" una vez por turno.
+  fr: |-
+    1 Syntoniseur + 1+ monstre non-Syntoniseur TÉNÈBRES
+    Le nom de cette carte devient "Dragon Rouge Archdémon" tant qu'elle est sur le Terrain ou dans le Cimetière. Si cette carte est envoyée depuis la Zone Monstre au Cimetière : vous pouvez Invoquer Spécialement 1 "Dragon Rouge Archdémon" depuis votre Extra Deck (ceci est traité comme une Invocation Synchro), puis, si cette carte a été envoyée au Cimetière comme Matériel Synchro pour un Monstre Synchro TÉNÈBRES Dragon, vous pouvez détruire tous les monstres en Position d'Attaque contrôlés par votre adversaire. Vous ne pouvez utiliser cet effet de "Dragon Rouge Archdémon Meurtri" qu'une fois par tour.
+  it: |-
+    1 Tuner + 1+ mostri OSCURITÀ non-Tuner
+    Il nome di questa carta diventa "Arcidemone Drago Rosso" mentre è sul Terreno o nel Cimitero. Se questa carta viene mandata dalla Zona Mostri al Cimitero: puoi Evocare Specialmente 1 "Arcidemone Drago Rosso" dal tuo Extra Deck (questa viene considerata come una Synchro Evocazione), poi, se questa carta è stata mandata al Cimitero come Materiale Synchro per un Mostro Synchro OSCURITÀ Drago, puoi distruggere tutti i mostri in Posizione di Attacco controllati dal tuo avversario. Puoi utilizzare questo effetto di "Arcidemone Drago Rossocicatrice" una sola volta per turno.
+  pt: |-
+    1 Regulador + 1+ monstros não-Reguladores de TREVAS
+    O nome deste card se torna "Dragão Vermelho Arquidemônio" enquanto estiver no campo ou no Cemitério. Se este card for enviado da Zona de Monstros para o Cemitério: você pode Invocar por Invocação-Especial 1 "Dragão Vermelho Arquidemônio" do seu Deck Adicional (isso é considerado uma Invocação-Sincro) e, depois, se este card foi enviado para o Cemitério como Matéria Sincro para um Monstro Sincro Dragão de TREVAS, você pode destruir todos os monstros em Posição de Ataque que seu oponente controla. Você só pode usar este efeito de "Dragão Vermelho Arquidemônio com Cicatriz" uma vez por turno.
   ja: |-
     チューナー＋チューナー以外の闇属性モンスター１体以上
     このカード名の②の効果は１ターンに１度しか使用できない。①：このカードのカード名は、フィールド・墓地に存在する限り「レッド・デーモンズ・ドラゴン」として扱う。②：このカードがモンスターゾーンから墓地へ送られた場合に発動できる。ＥＸデッキから「レッド・デーモンズ・ドラゴン」１体をＳ召喚扱いで特殊召喚する。このカードがドラゴン族・闇属性ＳモンスターのＳ素材として墓地へ送られていた場合、さらに相手フィールドの攻撃表示モンスターを全て破壊できる。
