--- a/data/cards/97489701.yaml
+++ b/data/cards/97489701.yaml
@@ -18,20 +18,20 @@ text:
     2 Tuners + "Red Dragon Archfiend"
     Gains 500 ATK for each Tuner in your GY. Cannot be destroyed by an opponent's card effects. When an opponent's monster declares an attack: You can target the attacking monster; banish this card, and if you do, negate that attack. Once per turn, during the End Phase, if this card was banished by its effect this turn: Special Summon this banished card.
   de: |-
-    2 Empfänger-Monster + „Rotdrachen-Erzunterweltler“
-    Diese Karte erhält 500 ATK für jedes Empfänger-Monster in deinem Friedhof. Kann nicht durch Karteneffekte deines Gegners zerstört werden. Wenn ein Monster deines Gegners einen Angriff deklariert: Du kannst das angreifende Monster wählen; verbanne diese Karte und falls du dies tust, annulliere den Angriff. Während der nächsten End Phase: Beschwöre diese durch diesen Effekt verbannte Karte als Spezialbeschwörung.
+    2 Empfänger + „Rotdrachen-Erzunterweltler“
+    Erhält für jeden Empfänger in deinem Friedhof 500 ATK. Kann nicht durch Karteneffekte eines Gegners zerstört werden. Wenn ein Monster eines Gegners einen Angriff deklariert: Du kannst das angreifende Monster wählen; verbanne diese Karte und falls du dies tust, annulliere jenen Angriff. Einmal pro Spielzug, während der End Phase, falls diese Karte in diesem Spielzug durch ihren Effekt verbannt wurde: Beschwöre diese verbannte Karte als Spezialbeschwörung.
   es: |-
     2 Cantantes + "Dragón Rojo Archidemonio"
-    Esta carta gana 500 ATK por cada monstruo Cantante en tu Cementerio. No puede ser destruido por efectos de cartas de tu adversario. Cuando un monstruo de tu adversario declara un ataque: puedes seleccionar el monstruo atacante; destierra esta carta y, si lo haces, niega ese ataque. Durante la próxima End Phase: Invoca de Modo Especial esta carta desterrada por este efecto.
+    Gana 500 ATK por cada Cantante en tu Cementerio. No puede ser destruido por efectos de cartas del adversario. Cuando un monstruo del adversario declara un ataque: puedes seleccionar el monstruo atacante; destierra esta carta y, si lo haces, niega ese ataque. Una vez por turno, durante la End Phase, si esta carta fue desterrada por su efecto este turno: Invoca de Modo Especial esta carta desterrada.
   fr: |-
     2 Syntoniseurs + "Dragon Rouge Archdémon"
-    Cette carte gagne 500 ATK pour chaque monstre Syntoniseur dans votre Cimetière. Non destructible par des effets de carte de votre adversaire. Lorsqu'un monstre de votre adversaire déclare une attaque : vous pouvez cibler le monstre attaquant ; bannissez cette carte, et si vous le faites, annulez l'attaque. Durant la prochaine End Phase : Invoquez Spécialement cette carte bannie par cet effet.
+    Gagne 500 ATK pour chaque Syntoniseur dans votre Cimetière. Non destructible par des effets de carte de l'adversaire. Lorsqu'un monstre de l'adversaire déclare une attaque : vous pouvez cibler le monstre attaquant ; bannissez cette carte, et si vous le faites, annulez l'attaque. Une fois par tour, durant la End Phase, si cette carte a été bannie par son effet ce tour : Invoquez Spécialement cette carte bannie.
   it: |-
     2 Tuner + "Arcidemone Drago Rosso"
-    Questa carta guadagna 500 ATK per ogni mostro Tuner nel tuo Cimitero. Non può essere distrutto dagli effetti delle carte dell'avversario. Quando un mostro dell'avversario dichiara un attacco: puoi scegliere come bersaglio il mostro attaccante; bandisci questa carta e, se lo fai, annulla quell'attacco. Durante la prossima End Phase: Evoca Specialmente questa carta bandita da questo effetto.
+    Guadagna 500 ATK per ogni Tuner nel tuo Cimitero. Non può essere distrutto dagli effetti delle carte dell'avversario. Quando un mostro dell'avversario dichiara un attacco: puoi scegliere come bersaglio il mostro attaccante; bandisci questa carta e, se lo fai, annulla quell'attacco. Una volta per turno, durante la End Phase, se questa carta è stata bandita dal suo stesso effetto in questo turno: Evoca Specialmente questa carta bandita.
   pt: |-
     2 Reguladores + "Dragão Vermelho Arquidemônio"
-    Este card ganha 500 de ATK para cada monstro Regulador no seu Cemitério. Não pode ser destruído por efeitos de card do oponente. Quando um monstro do oponente declarar um ataque: você pode escolher o monstro atacante; bana este card e, se isso acontecer, negue o ataque. Durante a próxima Fase Final: Invoque por Invocação-Especial este card banido por este efeito.
+    Ganha 500 de ATK para cada Regulador no seu Cemitério. Não pode ser destruído por efeitos de card do oponente. Quando um monstro do oponente declarar um ataque: você pode escolher o monstro atacante; bana este card e, se isso acontecer, negue o ataque. Uma vez por turno, durante a Fase Final, se este card foi banido por seu efeito neste turno: Invoque este card banido por Invocação-Especial.
   ja: |-
     チューナー２体＋「レッド・デーモンズ・ドラゴン」
     ①：このカードの攻撃力は自分の墓地のチューナーの数×５００アップする。②：フィールドのこのカードは相手の効果では破壊されない。③：相手モンスターの攻撃宣言時、その攻撃モンスター１体を対象として発動できる。フィールドのこのカードを除外し、その攻撃を無効にする。④：このカードの③の効果で除外されたターンのエンドフェイズに発動する。除外状態のこのカードを特殊召喚する。
