--- a/data/cards/98173209.yaml
+++ b/data/cards/98173209.yaml
@@ -2,25 +2,30 @@ konami_id: 19018
 password: 98173209
 name:
   en: Crimson Gaia
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Feuerrote Gaia
+  es: Gaia Carmesí
+  fr: Gaïa Cramoisie
+  it: Gaia Cremisi
+  pt: Gaia Carmesim
   ja: クリムゾン・ヘルガイア
   ja_romaji: Kurimuzon Herugaia
   ko: 크림즌 헬가이아
-  ko_rr:
+  ko_rr: Keurimjeun Helgaia
   zh-TW:
   zh-CN:
 text:
   en: |-
     During your Main Phase: You can add 1 "Red Dragon Archfiend" or 1 card that mentions it from your Deck or GY to your hand, except "Crimson Gaia". When your "Red Dragon Archfiend" declares an attack: You can change all monsters your opponent controls to face-down Defense Position. If a monster(s) on the field is destroyed by battle or card effect: You can Special Summon 1 "Red Dragon Archfiend" from your GY. You can only use each effect of "Crimson Gaia" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während deiner Main Phase: Du kannst deiner Hand 1 „Rotdrachen-Erzunterweltler“ oder 1 Karte, die ihn erwähnt, von deinem Deck oder Friedhof hinzufügen, außer „Feuerrote Gaia“. Wenn dein „Rotdrachen-Erzunterweltler“ einen Angriff deklariert: Du kannst alle Monster, die dein Gegner kontrolliert, in die verdeckte Verteidigungsposition ändern. Falls ein oder mehr Monster auf dem Spielfeld durch Kampf oder einen Karteneffekt zerstört werden: Du kannst 1 „Rotdrachen-Erzunterweltler“ als Spezialbeschwörung von deinem Friedhof beschwören. Du kannst jeden Effekt von „Feuerrote Gaia“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Durante tu Main Phase: puedes añadir a tu mano 1 "Dragón Rojo Archidemonio" en tu Deck o Cementerio o 1 carta que lo mencione, excepto "Gaia Carmesí". Cuando tu "Dragón Rojo Archidemonio" declara un ataque: puedes cambiar todos los monstruos que controle tu adversario a Posición de Defensa boca abajo. Si uno o más monstruos en el Campo son destruidos en batalla o por el efecto de una carta: puedes Invocar de Modo Especial, desde tu Cementerio, 1 "Dragón Rojo Archidemonio". Sólo puedes usar cada efecto de "Gaia Carmesí" una vez por turno.
+  fr: |-
+    Durant votre Main Phase : vous pouvez ajouter 1 "Dragon Rouge Archdémon" ou 1 carte qui le mentionne ("Gaïa Cramoisie" exclu) depuis votre Deck ou Cimetière à votre main. Lorsque votre "Dragon Rouge Archdémon" déclare une attaque : vous pouvez changer tous les monstres contrôlés par votre adversaire en Position de Défense face verso. Si un ou plusieurs monstres sur le Terrain sont détruits au combat ou par un effet de carte : vous pouvez Invoquer Spécialement 1 "Dragon Rouge Archdémon" depuis votre Cimetière. Vous ne pouvez utiliser chaque effet de "Gaïa Cramoisie" qu'une fois par tour.
+  it: |-
+    Durante la tua Main Phase: puoi aggiungere 1 "Arcidemone Drago Rosso" o 1 carta che lo menziona dal tuo Deck o Cimitero alla tua mano, eccetto "Gaia Cremisi". Quando un tuo "Arcidemone Drago Rosso" dichiara un attacco: puoi mettere coperti in Posizione di Difesa tutti i mostri controllati dal tuo avversario. Se uno o più mostri sul Terreno vengono distrutti in battaglia o dall'effetto di una carta: puoi Evocare Specialmente 1 "Arcidemone Drago Rosso" dal tuo Cimitero. Puoi utilizzare ogni effetto di "Gaia Cremisi" una sola volta per turno.
+  pt: |-
+    Durante sua Fase Principal: você pode adicionar 1 "Dragão Vermelho Arquidemônio" ou 1 card que o mencione do seu Deck ou Cemitério à sua mão, exceto "Gaia Carmesim". Quando seu "Dragão Vermelho Arquidemônio" declarar um ataque: você pode colocar todos os monstros que seu oponente controla com a face para baixo em Posição de Defesa. Se um ou mais monstros no campo forem destruídos em batalha ou por um efeito de card: você pode Invocar por Invocação-Especial 1 "Dragão Vermelho Arquidemônio" do seu Cemitério. Você só pode usar cada efeito de "Gaia Carmesim" uma vez por turno.
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。「クリムゾン・ヘルガイア」を除く、「レッド・デーモンズ・ドラゴン」またはそのカード名が記されたカード１枚を自分のデッキ・墓地から手札に加える。②：自分の「レッド・デーモンズ・ドラゴン」の攻撃宣言時に発動できる。相手フィールドのモンスターを全て裏側守備表示にする。③：フィールドのモンスターが戦闘・効果で破壊された場合に発動できる。自分の墓地から「レッド・デーモンズ・ドラゴン」１体を特殊召喚する。
   ko: |-
