--- a/data/rush/17211.yaml
+++ b/data/rush/17211.yaml
@@ -45,6 +45,7 @@ property: Normal
 images:
 - index: 1
   image: MagicalStoneExcavation-RDGRP1-JP-SR.png
+  illustration: MagicalStoneExcavation-G002-JP-VG-artwork.png
 - index: 2
   image: MagicalStoneExcavation-RDS23P-JP-OP.png
 sets:
@@ -62,6 +63,11 @@ sets:
     set_name: Grand Rush Pack
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR030
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
