--- a/data/cards/09753964.yaml
+++ b/data/cards/09753964.yaml
@@ -21,7 +21,7 @@ text:
     1 Empfänger + 1 FINSTERNIS Drache-Nicht-Empfänger-Synchromonster
     (Schnelleffekt): Du kannst 1 offene Karte wählen, die dein Gegner kontrolliert; annulliere ihre Effekte bis zum Ende dieses Spielzugs. Wenn diese Karte deinem Gegner Kampfschaden zufügt: Du kannst 1 Empfänger in deinem Friedhof wählen; beschwöre ihn als Spezialbeschwörung in die Verteidigungsposition. Du kannst jeden Effekt von „Glühender Rotdrachen-Erzunterweltler Abyss“ nur einmal pro Spielzug verwenden.
   es: |-
-    1 Cantante + 1 Monstruo de Sincronía de OSCURIDAD Dragón que no sea Cantante
+    1 Cantante + 1 Monstruo de Sincronía Dragón de OSCURIDAD que no sea Cantante
     (Efecto Rápido): puedes seleccionar 1 carta boca arriba que controle tu adversario; niega sus efectos hasta el final de este turno. Cuando esta carta inflige daño de batalla a tu adversario: puedes seleccionar 1 Cantante en tu Cementerio; Invócalo de Modo Especial en Posición de Defensa. Sólo puedes usar cada efecto de "Ardiente Dragón Rojo Archidemonio del Abismo" una vez por turno.
   fr: |-
     1 Syntoniseur + 1 Monstre Synchro non-Syntoniseur TÉNÈBRES Dragon
