--- a/data/cards/27503418.yaml
+++ b/data/cards/27503418.yaml
@@ -10,22 +10,22 @@ name:
   ja: <ruby>王者の調和<rt>キングス・シンクロ</rt></ruby>
   ja_romaji: Kingusu Shinkuro
   ko: 킹스 싱크로
-  ko_rr:
+  ko_rr: Kingjeu Singkeuro
   zh-TW:
   zh-CN: 王者的调和
 text:
   en: |-
     When your opponent's monster declares an attack on a Synchro Monster you control: Negate the attack, then you can apply the rest of this card's effect. Banish that Synchro Monster you control and 1 Tuner from your GY, and if you do, Special Summon from your Extra Deck 1 Synchro Monster whose Level equals the total Levels the banished monsters had. (This is treated as a Synchro Summon.)
   de: |-
-    Wenn ein Monster deines Gegners einen Angriff gegen ein Synchromonster deklariert, das du kontrollierst: Annulliere den Angriff, dann kannst du den Rest des Effekts dieser Karte ausführen. Verbanne das Synchromonster, das du kontrollierst, und 1 Empfänger von deinem Friedhof und falls du dies tust, beschwöre 1 Synchromonster, dessen Stufe der Summe der Stufe entspricht, welche die verbannten Monster hatten, als Spezialbeschwörung von deinem Extra Deck. (Diese Spezialbeschwörung wird als Synchrobeschwörung behandelt.)
+    Wenn ein Monster deines Gegners einen Angriff gegen ein Synchromonster deklariert, das du kontrollierst: Annulliere den Angriff, dann kannst du den Rest des Effekts dieser Karte ausführen. Verbanne jenes Synchromonster, das du kontrollierst, und 1 Empfänger von deinem Friedhof und falls du dies tust, beschwöre 1 Synchromonster, dessen Stufe der Summe der Stufen entspricht, welche die verbannten Monster hatten, als Spezialbeschwörung von deinem Extra Deck. (Dies wird als Synchrobeschwörung behandelt.)
   es: |-
-    Cuando un monstruo de tu adversario declara un ataque a un Monstruo de Sincronía que controles: niega el ataque, y después puedes aplicar el resto del efecto de esta carta. Destierra ese Monstruo de Sincronía que controles y 1 Cantante de tu Cementerio y, si lo haces, Invoca de Modo Especial, desde tu Deck Extra, 1 Monstruo de Sincronía cuyo Nivel sea igual a los Niveles totales que tenían los monstruos desterrados. (Esta Invocación Especial se trata como una Invocación por Sincronía).
+    Cuando un monstruo de tu adversario declara un ataque a un Monstruo de Sincronía que controles: niega el ataque, y después puedes aplicar el resto del efecto de esta carta. Destierra ese Monstruo de Sincronía que controles y 1 Cantante en tu Cementerio y, si lo haces, Invoca de Modo Especial, desde tu Deck Extra, 1 Monstruo de Sincronía cuyo Nivel sea igual a los Niveles totales que tenían los monstruos desterrados. (Esto se trata como una Invocación por Sincronía).
   fr: |-
-    Lorsqu'un monstre de votre adversaire déclare une attaque sur un Monstre Synchro que vous contrôlez : annulez l'attaque, puis vous pouvez appliquer le reste de l'effet de cette carte. Bannissez le Monstre Synchro que vous contrôlez et 1 Syntoniseur depuis votre Cimetière, et si vous le faites, Invoquez Spécialement 1 Monstre Synchro depuis votre Extra Deck, dont le Niveau est égal à la somme des Niveaux que les monstres bannis avaient. (Cette Invocation Spéciale est traitée comme une Invocation Synchro.)
+    Lorsqu'un monstre de votre adversaire déclare une attaque sur un Monstre Synchro que vous contrôlez : annulez l'attaque, puis vous pouvez appliquer le reste de l'effet de cette carte. Bannissez le Monstre Synchro que vous contrôlez et 1 Syntoniseur depuis votre Cimetière, et si vous le faites, Invoquez Spécialement 1 Monstre Synchro depuis votre Extra Deck, dont le Niveau est égal à la somme des Niveaux que les monstres bannis avaient. (Ceci est traité comme une Invocation Synchro.)
   it: |-
-    Quando un mostro del tuo avversario dichiara un attacco su un Mostro Synchro che controlli: annulla l'attacco, poi puoi applicare il resto dell'effetto di questa carta. Bandisci quel Mostro Synchro che controlli e 1 Tuner dal tuo Cimitero e, se lo fai, Evoca Specialmente dal tuo Extra Deck 1 Mostro Synchro con Livello pari alla somma dei Livelli che avevano i mostri banditi. (Questa Evocazione Speciale viene considerata come una Synchro Evocazione.)
+    Quando un mostro del tuo avversario dichiara un attacco su un Mostro Synchro che controlli: annulla l'attacco, poi puoi applicare il resto dell'effetto di questa carta. Bandisci quel Mostro Synchro che controlli e 1 Tuner dal tuo Cimitero e, se lo fai, Evoca Specialmente dal tuo Extra Deck 1 Mostro Synchro con Livello pari alla somma dei Livelli che avevano i mostri banditi. (Questa viene considerata come una Synchro Evocazione.)
   pt: |-
-    Quando um monstro do seu oponente declarar um ataque contra um Monstro Sincro que você controla: negue o ataque e, depois, você pode aplicar o resto dos efeitos deste card. Bana esse Monstro Sincro que você controla e 1 Regulador do seu Cemitério e, se isso acontecer, Invoque por Invocação-Especial do seu Deck Adicional 1 Monstro Sincro cujo Nível seja igual à soma dos Níveis que os monstros banidos tinham. (Esta Invocação-Especial é considerada uma Invocação-Sincro.)
+    Quando um monstro do seu oponente declarar um ataque contra um Monstro Sincro que você controla: negue o ataque e, depois, você pode aplicar o resto dos efeitos deste card. Bana esse Monstro Sincro que você controla e 1 Regulador do seu Cemitério e, se isso acontecer, Invoque por Invocação-Especial do seu Deck Adicional 1 Monstro Sincro cujo Nível seja igual à soma dos Níveis que os monstros banidos tinham. (Isso é considerado uma Invocação-Sincro.)
   ja: |-
     ①：相手モンスターが自分のＳモンスターに攻撃宣言した時に発動できる。その攻撃を無効にする。その後、以下の効果を適用できる。
     ●その自分のＳモンスターと自分の墓地のチューナー１体を除外し、除外したモンスターのレベルの合計と同じレベルを持つＳモンスター１体を、ＥＸデッキからＳ召喚扱いで特殊召喚する。
