--- a/data/cards/35058857.yaml
+++ b/data/cards/35058857.yaml
@@ -3,29 +3,29 @@ password: 35058857
 name:
   en: Magical King Moonstar
   de: Magischer König Mondstern
-  es: Rey Mágico Moonsta
+  es: Rey Mágico Moonstar
   fr: Étoilune le Roi Magicien
   it: Re Magico Lunastella
   pt: Rei Mágico Estrela Lunar
   ja: <ruby>奇<rt>き</rt></ruby><ruby>術<rt>じゅつ</rt></ruby><ruby>王<rt>おう</rt></ruby> ムーン・スター
   ja_romaji: Kijutsuō Mūn Sutā
   ko: 기술왕 문 스타
-  ko_rr:
+  ko_rr: Gisulwang Mun Seuta
   zh-TW:
   zh-CN: 奇术王 月星
 text:
   en: |-
     Cannot be used as Synchro Material, except for the Synchro Summon of a DARK Synchro Monster. If you control a Tuner, you can Special Summon this card (from your hand). If this card is Normal or Special Summoned: You can target 1 other face-up monster you control or in your GY; until the end of this turn, this card's Level becomes the same as that monster's, also you cannot Special Summon, except by Synchro Summon.
   de: |-
-    Kann nicht als Synchromaterial verwendet werden, außer für die Synchrobeschwörung eines FINSTERNIS Synchromonsters. Falls du ein Empfänger-Monster kontrollierst, kannst du diese Karte als Spezialbeschwörung (von deiner Hand) beschwören. Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst 1 anderes Monster wählen, das du kontrollierst oder das sich in deinem Friedhof befindet; bis zum Ende dieses Spielzugs wird die Stufe dieser Karte dieselbe wie die des Monsters, zusätzlich kannst du keine Monster als Spezialbeschwörung beschwören, außer als Synchrobeschwörung.
+    Kann nicht als Synchromaterial verwendet werden, außer für die Synchrobeschwörung eines FINSTERNIS Synchromonsters. Falls du einen Empfänger kontrollierst, kannst du diese Karte als Spezialbeschwörung (von deiner Hand) beschwören. Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst 1 anderes offenes Monster wählen, das du kontrollierst oder das sich in deinem Friedhof befindet; bis zum Ende dieses Spielzugs wird die Stufe dieser Karte dieselbe wie die jenes Monsters, zusätzlich kannst du keine Monster als Spezialbeschwörung beschwören, außer als Synchrobeschwörung.
   es: |-
-    No puede ser usado como Material de Sincronía, excepto para la Invocación por Sincronía de un Monstruo de Sincronía de OSCURIDAD. Si controlas un monstruo Cantante, puedes Invocar esta carta de Modo Especial (desde tu mano). Si esta carta es Invocada de Modo Normal o Especial: puedes seleccionar otro monstruo que controles o que esté en tu Cementerio; hasta el final de este turno, el Nivel de esta carta se convierte en el mismo que el de ese monstruo, y además no puedes Invocar de Modo Especial, excepto Invocando por Sincronía.
+    No puede ser usado como Material de Sincronía, excepto para la Invocación por Sincronía de un Monstruo de Sincronía de OSCURIDAD. Si controlas un Cantante, puedes Invocar esta carta de Modo Especial (desde tu mano). Si esta carta es Invocada de Modo Normal o Especial: puedes seleccionar otro monstruo boca arriba que controles o en tu Cementerio; hasta el final de este turno, el Nivel de esta carta se convierte en el mismo que el de ese monstruo, y además no puedes Invocar de Modo Especial, excepto Invocando por Sincronía.
   fr: |-
-    Non utilisable comme Matériel de Synchro, sauf pour l'Invocation Synchro d'un Monstre Synchro TÉNÈBRES. Si vous contrôlez un monstre Syntoniseur, vous pouvez Invoquer Spécialement cette carte (depuis votre main). Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez cibler 1 autre monstre que vous contrôlez ou dans votre Cimetière ; jusqu'à la fin de ce tour, le Niveau de cette carte devient le même que celui du monstre, et aussi, vous ne pouvez pas Invoquer Spécialement, sauf par Invocation Synchro.
+    Non utilisable comme Matériel Synchro, sauf pour l'Invocation Synchro d'un Monstre Synchro TÉNÈBRES. Si vous contrôlez un Syntoniseur, vous pouvez Invoquer Spécialement cette carte (depuis votre main). Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez cibler 1 autre monstre face recto que vous contrôlez ou dans votre Cimetière ; jusqu'à la fin de ce tour, le Niveau de cette carte devient le même que celui du monstre, et aussi, vous ne pouvez pas Invoquer Spécialement, sauf par Invocation Synchro.
   it: |-
-    Non può essere utilizzato come Materiale Synchro, eccetto che per la Synchro Evocazione di un Mostro Synchro OSCURITÀ. Se controlli un mostro Tuner, puoi Evocare Specialmente questa carta (dalla tua mano). Se questa carta viene Evocata Normalmente o Specialmente: puoi scegliere come bersaglio 1 altro mostro che controlli o nel tuo Cimitero; fino alla fine di questo turno, il Livello di questa carta diventa lo stesso di quel mostro, inoltre non puoi Evocare Specialmente, eccetto tramite Synchro Evocazione.
+    Non può essere utilizzato come Materiale Synchro, eccetto che per la Synchro Evocazione di un Mostro Synchro OSCURITÀ. Se controlli un Tuner, puoi Evocare Specialmente questa carta (dalla tua mano). Se questa carta viene Evocata Normalmente o Specialmente: puoi scegliere come bersaglio 1 altro mostro scoperto che controlli o nel tuo Cimitero; fino alla fine di questo turno, il Livello di questa carta diventa lo stesso di quel mostro, inoltre non puoi Evocare Specialmente, eccetto tramite Synchro Evocazione.
   pt: |-
-    Não pode ser usado como uma Matéria Sincro, exceto para a Invocação-Sincro de um Monstro Sincro de TREVAS. Se você controlar um monstro Regulador, você pode Invocar este card por Invocação-Especial (da sua mão). Se este card for Invocado por Invocação-Normal ou Especial: você pode escolher 1 outro monstro que você controla ou no seu Cemitério; até o final deste turno, o Nível deste card se torna o mesmo que o desse monstro e, além disso, você não pode Invocar por Invocação-Especial, exceto por Invocações-Sincro.
+    Não pode ser usado como Matéria Sincro, exceto para a Invocação-Sincro de um Monstro Sincro de TREVAS. Se você controlar um Regulador, você pode Invocar este card por Invocação-Especial (da sua mão). Se este card for Invocado por Invocação-Normal ou Especial: você pode escolher 1 outro monstro com a face para cima que você controla ou no seu Cemitério; até o final deste turno, o Nível deste card se torna o mesmo que o desse monstro e, além disso, você não pode Invocar por Invocação-Especial, exceto por Invocação-Sincro.
   ja: |-
     このカードをＳ素材とする場合、闇属性モンスターのＳ召喚にしか使用できない。①：自分フィールドにチューナーが存在する場合、このカードは手札から特殊召喚できる。②：このカードが召喚・特殊召喚した場合、自分のフィールド（表側表示）・墓地のモンスター１体を対象として発動できる。このカードのレベルはターン終了時までそのモンスターと同じになる。この効果の発動後、ターン終了時まで自分はＳ召喚以外の特殊召喚ができない。
   ko: |-
