--- a/data/cards/40975574.yaml
+++ b/data/cards/40975574.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Wenn diese Karte als Normalbeschwörung beschworen wird: Du kannst 1 Monster der Stufe 4 oder niedriger als Spezialbeschwörung von deiner Hand beschwören. Wenn diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 offenes Monster auf dem Spielfeld wählen; du erhältst LP in Höhe seiner ATK. Du kannst diesen Effekt von „Roter Resonator“ nur einmal pro Spielzug verwenden.
   es: |-
-    Cuando esta carta es Invocada de Modo Normal: puedes Invocar de Modo Especial, desde tu mano, 1 monstruo de Nivel 4 o menor. Cuando esta carta es Invocada de Modo Especial: puedes seleccionar 1 monstruo boca arriba en el Campo; gana tantos LP como su ATK. Sólo puedes usar este efecto de "Resonador Rojo" una vez por turno.
+    Cuando esta carta es Invocada de Modo Normal: puedes Invocar de Modo Especial, desde tu mano, 1 monstruo de Nivel 4 o menor. Cuando esta carta es Invocada de Modo Especial: puedes seleccionar 1 monstruo boca arriba en el Campo; gana LP iguales a su ATK. Sólo puedes usar este efecto de "Resonador Rojo" una vez por turno.
   fr: |-
     Lorsque cette carte est Invoquée Normalement : vous pouvez Invoquer Spécialement 1 monstre de max. Niveau 4 depuis votre main. Lorsque cette carte est Invoquée Spécialement : vous pouvez cibler 1 monstre face recto sur le Terrain ; gagnez des LP égaux à son ATK. Vous ne pouvez utiliser cet effet de "Diapason Rouge" qu'une fois par tour.
   it: |-
