--- a/data/cards/77360173.yaml
+++ b/data/cards/77360173.yaml
@@ -10,7 +10,7 @@ name:
   ja: シンクローン・リゾネーター
   ja_romaji: Shinkurōn Rizonētā
   ko: 싱클론 레조네이터
-  ko_rr:
+  ko_rr: Singkeullon Rejoneiteo
   zh-TW:
   zh-CN: 同步克隆共鸣者
 text:
