--- a/data/rush/17333.yaml
+++ b/data/rush/17333.yaml
@@ -56,6 +56,11 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/EPP1-KR026
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
