--- a/data/rush/18601.yaml
+++ b/data/rush/18601.yaml
@@ -79,6 +79,11 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR032
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
